# openmcpskills

./: .gitignore  CHECKLIST.md  PRD.md  UPGRADE_TO_2025-11-25.md  deploy-backend.sh  deploy-frontend.sh  docker-compose.yml  require-temp.md
.kiro/settings/: mcp.json
backend/: .env.example  Dockerfile  README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  admin.py  deps.py  health.py  mcp.py
backend/app/core/: config.py
backend/app/models/: __init__.py  session.py  skill.py
backend/app/services/: __init__.py  invocation_logger.py  mcp_engine.py  metadata_store.py  redis_sync.py  s3_store.py  session_manager.py  skill_loader.py
backend/tests/: __init__.py  test_mcp.py  test_storage.py
deploy/: README.md  add-origin-group.sh  deploy-to-ecs.sh  setup-cloudfront.sh  update-cloudfront-origin.sh
docs/: phase3-storage-design.md
frontend/: Dockerfile  README.md  docker-compose.yml  index.html  package-lock.json  package.json
frontend/src/components/: app-sidebar.tsx
frontend/src/layouts/: private-layout.tsx
frontend/src/pages/: dashboard.tsx  login.tsx  settings.tsx  skill-detail.tsx  skills.tsx  upload.tsx
frontend/src/routes/: index.tsx
frontend/src/store/: app-store.ts  skills-store.ts
scripts/: init-local-storage.sh
skills/calculator/: SKILL.md
skills/code-review/: SKILL.md
skills/hello-world/: SKILL.md
skills/web-search/: SKILL.md
